# my-app-builder

./: .gitignore  README.md  requirements.md
backend/: Cargo.toml
backend/src/: build.rs  handlers.rs  main.rs  realtime.rs  store.rs
demo/: .gitignore  README.md  dashboard-demo.mjs  package-lock.json  package.json  todo-demo.mjs
docs/: deployment.md  evaluation.md  m1-plan.md  m2-plan.md  m3-plan.md  presentation.html
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/application/: commands.test.ts  commands.ts  data-source.test.ts  demo-scenario.test.ts  demo-scenario.ts  diagram-export.test.ts  diagram-export.ts  load-or-create-project.ts  preview-interpreter.test.ts  preview-interpreter.ts  referential-integrity.test.ts  screen-flow.test.ts  screen-flow.ts  table-bind.ts
frontend/src/di/: container.ts
frontend/src/domain/: actions.ts  component-node.test.ts  component-node.ts  custom-part.test.ts  data-channel.test.ts  data-channel.ts  data-model.test.ts  data-model.ts  data-source.ts  design-presets.test.ts  design-presets.ts  design-tokens.test.ts  design-tokens.ts  dialog.ts  errors.ts  expr.test.ts  expr.ts  flex-style.ts  grid.ts  ids.ts  node-style.ts  page-path.test.ts  page.ts  project-doc.test.ts  project-doc.ts  rules.test.ts  schema.ts  screen-size.test.ts
frontend/src/shared/: result.ts
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: api-client.ts  describe.ts  index.ts
mcp-server/test/: smoke.ts
(+96 files in other folders)
